<resources>
    <string name="app_name">Lubelskie Stacje Pogodowe</string>

    <!--Bottom navigation-->
    <string name="title_temp">Temperatura</string>
    <string name="title_air">Powietrze</string>
    <string name="title_map">Mapa</string>

    <!--menu-->
    <string name="favorite">Ulubione</string>
    <string name="settings">Ustawienia</string>
    <string name="about">O aplikacji</string>

    <!--messages-->
    <string name="added_to_favorites">Stacja dodana do Ulubionych.</string>
    <string name="removed_from_favorites">Stacja usunięta z Ulubionych.</string>
    <string name="error_no_connection">Brak połączenia z Internetem.</string>
    <string name="error_no_web_browser">Brak przeglądarki Internetowej.</string>
    <string name="error_server">Problem z serwerem lub z połączeniem sieciowym.</string>
    <string name="error_server_list">Nie można zaktualizowac niektórych stacji - problem z serwerem lub z połączeniem sieciowym.</string>

    <!--Station fragment-->
    <string name="umcs_station_title_weather">Stacja pogodowa UMCS</string>
    <string name="imgw_station_title_weather">Stacja pogodowa IMGW</string>
    <string name="generic_station_title_weather">Stacja pogodowa</string>
    <string name="station_title_air">Stacja powietrza GIOŚ</string>
    <string name="forecast_title">Prognoza ICM</string>
    <string name="air_index_title">O indeksie jakości powietrza</string>

    <string name="station_open_website">Otwórz stronę stacji</string>
    <string name="forecast_open_website">Otwórz stronę prognozy</string>
    <string name="open_website">Otwórz stronę</string>

    <string name="data_placeholder">%1$s%2$s</string>

    <string name="station_date">Data</string>
    <string name="station_date_old">%1$s - dane nieaktualne</string>
    <string name="station_wind">Wiatr</string>
    <string name="station_temp">Temperatura</string>
    <string name="station_temp_air">Temp. odczuwalna</string>
    <string name="station_temp_ground">Temp. przygruntowa</string>
    <string name="station_humidity">Wilgotność</string>
    <string name="station_pressure">Ciśnienie</string>
    <string name="station_rain_today">Opad dziś</string>

    <!--settings-->
    <string name="auto_sync_title">Ustawienia automatycznej synchronizacji</string>
    <string name="auto_sync_weather_title">Ustawienia stacji pogodowych</string>
    <string name="auto_sync_air_title">Ustawienia stacji powietrza</string>
    <string name="app_settings_title">Ustawienia aplikacji</string>
    <string name="enable_auto_sync_title">Włącz automatyczną synchronizację</string>
    <string name="default_location_title">Użyj lokalizacji</string>
    <string name="default_location_summary">Pokazuj na widgecie i w powiadomieniu najbliższą stację (wymaga dostępu do lokalizacji w tle oraz dane muszą być aktualne)</string>
    <string name="show_weather_notification_title">Wyświetlaj powiadomienie</string>
    <string name="show_weather_notification_summary">Stałe powiadomienie z temperaturą dla najbliższej lub podstawowej stacji</string>
    <string name="show_air_quality_notification_title">Monitoruj stan powietrza</string>
    <string name="show_air_quality_notification_summary">Wyświetl powiadomienie gdy jakość powietrza przekroczy dopuszczalną normę (wymaga dostępu do lokalizacji w tle, stacja nie może być dalej niż 10 km)</string>
    <string name="show_weather_notification_icon_title">Wyświetlaj ikonę jako temperaturę</string>
    <string name="show_weather_notification_icon_summary">Funkcja eksperymentalna, polecane dla Always-on display</string>
    <string name="open_weather_station_from_externals_title">Otwórz konkretną stację</string>
    <string name="enable_google_play_services_title">Używaj Usług Google Play</string>
    <string name="open_weather_station_from_externals_summary">Po kliknięciu w widget/powiadomienie</string>
    <string name="enable_google_play_services_summary">Jeśli chcesz, możesz wyłączyć Usługi Google (wykorzystywane do określania lokalizacji oraz jako dostawca mapy)</string>
    <string name="sync_via_title">Synchronizowanie przez</string>
    <string name="weather_auto_sync_title">Stacje pogodowe</string>
    <string name="air_auto_sync_title">Stacje powietrza</string>
    <string name="night_mode_title">Motyw interfejsu</string>
    <string name="default_station_title">Stacja podstawowa</string>
    <string name="air_quality_warning_title">Poinformuj kiedy stan powietrza jest</string>
    <string name="sync_every_placeholder">synchronizuj co %1$s</string>
    <string name="weather_sync_interval_default">15</string>
    <string name="air_sync_interval_default">60</string>
    <string name="sync_default">all</string>
    <string name="night_mode_default">1</string>
    <string name="default_station_default">16</string>
    <string name="air_quality_warning_default">2</string>

    <!--settings keys-->
    <string name="app_settings_key">app_settings_key</string>
    <string name="enable_auto_sync_key">enable_auto_sync_key</string>
    <string name="show_weather_notification_key">show_weather_notification_key</string>
    <string name="show_weather_notification_icon_key">show_weather_notification_icon_key</string>
    <string name="open_weather_station_from_externals_key">open_weather_station_from_externals_key</string>
    <string name="enable_google_play_services_key">enable_google_play_services_key</string>
    <string name="show_air_quality_notification_key">show_air_quality_notification_key</string>
    <string name="default_location_key">widget_location_key</string>
    <string name="weather_sync_interval_key">weather_sync_interval_key</string>
    <string name="air_sync_interval_key">air_sync_interval_key</string>
    <string name="sync_via_key">sync_via_key</string>
    <string name="night_mode_key">night_mode_key</string>
    <string name="default_station_key">widget_station_key</string>
    <string name="air_quality_warning_key">air_quality_warning_key</string>
    <string name="weather_filter_key">weather_filter_key</string>
    <string name="air_filter_key">air_filter_key</string>

    <!--settings options-->
    <string name="connected_options_all">Wi-Fi i Dane mobilne</string>
    <string name="connected_options_wifi">Wi-Fi</string>

    <string name="weather_interval_options_15_min">15 min</string>
    <string name="weather_interval_options_30_min">30 min</string>
    <string name="weather_interval_options_1_h">1 godz</string>
    <string name="weather_interval_options_3_h">3 godz</string>
    <string name="weather_interval_options_6_h">6 godz</string>

    <string name="air_interval_options_1_h">1 godz</string>
    <string name="air_interval_options_2_h">2 godz</string>
    <string name="air_interval_options_3_h">3 godz</string>
    <string name="air_interval_options_4_h">4 godz</string>
    <string name="air_interval_options_5_h">5 godz</string>
    <string name="air_interval_options_6_h">6 godz</string>

    <string name="night_mode_options_default">Zgodny z ustawieniami systemu</string>
    <string name="night_mode_options_light">Jasny</string>
    <string name="night_mode_options_dark">Ciemny</string>

    <string name="no_bg_location">Nie przyznano dostepu do lokalizacji w tle</string>

    <!--chart-->
    <string name="chart_empty">Brak danych</string>
    <string name="chart_title">%1$s - ostatnie 24h</string>
    <string name="limit_line_label">100%</string>
    <string name="marker_text">%1$s - %2$s</string>

    <!--units TODO get rid ot this hardcoded whitespaces and " "-->
    <string name="m_per_sec">" m/s"</string>
    <string name="km_per_hour">" km/h"</string>
    <string name="celsius_degree">\u00B0C</string>
    <string name="percent">" %"</string>
    <string name="hectopascal">" hPa"</string>
    <string name="milliliters">" mm"</string>
    <string name="km">" km"</string>
    <string name="m">" m"</string>
    <string name="microgram_per_cubic_metre">" µg/m\u00B3"</string>
    <string name="milligram_per_cubic_metre">" mg/m\u00B3"</string>

    <!--widget-->
    <string name="appwidget_text"> - </string>
    <string name="add_widget">Dodaj widget</string>

    <!--weather notification-->
    <string name="weather_notification_channel_name">Temperatura</string>
    <string name="weather_notification_channel_description">Wyświetla temperaturę dla najbliższej lub podstawowej stacji</string>

    <!--air notification-->
    <string name="air_index_notification_channel_name">Jakość powietrza</string>
    <string name="air_index_notification_channel_description">Wyświetla powiadomienie gdy jakość powietrza przekroczy dopuszczalną normę</string>
    <string name="air_index_notification_content">Jakość powietrza przekracza dopuszczalną normę!</string>

    <!--air sensor type-->
    <string name="sensor_type_pm10">Pył zawieszony PM10</string>
    <string name="sensor_type_pm25">Pył zawieszony PM2.5</string>
    <string name="sensor_type_o3">Ozon</string>
    <string name="sensor_type_no2">Dwutlenek azotu</string>
    <string name="sensor_type_so2">Dwutlenek siarki</string>
    <string name="sensor_type_c6h6">Benzen</string>
    <string name="sensor_type_co">Tlenek węgla</string>

    <!--air quality index-->
    <string name="air_quality">Stan powietrza:</string>
    <string name="sensor_quality_very_good">Bardzo dobry</string>
    <string name="sensor_quality_good">Dobry</string>
    <string name="sensor_quality_moderate">Umiarkowany</string>
    <string name="sensor_quality_unhealthy_sensitive">Dostateczny</string>
    <string name="sensor_quality_unhealthy">Zły</string>
    <string name="sensor_quality_hazardous">Bardzo zły</string>

    <!--about-->
    <string name="version">Wersja %1$s</string>
    <string name="author">\u00A9 2015–2020 Mateusz Sieńczyk</string>
    <string name="email">mat.sienczyk@gmail.com</string>
    <string name="rate_app">Oceń aplikację</string>
    <string name="license">Licencje Open Source</string>
    <string name="terms">Warunki i informacje</string>
    <string name="info_part">Lubelskie Stacje Pogodowe to darmowa aplikacja pozwalająca sprawdzić aktualny stan pogody na terenie województwa lubelskiego.</string>
    <string name="error_play_store">Problem ze Sklepem Play.</string>
    <string name="ok">OK</string>
    <string name="privacy_policy">Polityka prywatności</string>
    <string name="privacy_url">https://sites.google.com/view/lsp-privacy-policy</string>

    <!--navigation keys, check if it match in shortcuts.xml due to unable to use res there-->
    <string name="navigation_key">navigation_key</string>
    <string name="navigation_map">navigation_map</string>
    <string name="navigation_air">navigation_air</string>
    <string name="navigation_weather">navigation_weather</string>

    <!--filers-->
    <string name="filters">Filtry stacji</string>
    <string name="save">Zapisz</string>
    <string name="reset">Reset</string>
    <string name="cancel">Anuluj</string>
    <string name="filter_weather_stations">Pogodowcyh:</string>
    <string name="filter_air_stations">Powietrza:</string>
    <string name="filter_nothing">Ukryj</string>
    <string name="filter_location">Lokalizacja</string>
    <string name="filter_temperature">Temperatura</string>
    <string name="filter_wind">Wiatr</string>
    <string name="filter_humidity">Wilgotność</string>
    <string name="filter_rain_today">Desz dziś</string>
    <string name="filter_pm10">Pył zawieszony PM10</string>
    <string name="filter_pm25">Pył zawieszony PM2.5</string>
    <string name="filter_o3">Ozon O3</string>
    <string name="filter_no2">Dwutlenek azotu NO3</string>
    <string name="filter_so2">Dwutlenek siarki SO2</string>
    <string name="filter_c6h6">Benzen C6H6</string>
    <string name="filter_co">Tlenek węgla CO</string>

</resources>
