<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="pl.sienczykm.templbn.BuildConfig" />

        <import type="pl.sienczykm.templbn.ui.about.AboutFragment.DialogType" />

        <variable
                name="viewModel"
                type="pl.sienczykm.templbn.ui.about.AboutViewModel" />
    </data>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
                android:id="@+id/coordinator_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin">

            <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    app:cardCornerRadius="@dimen/card_view_radius"
                    app:cardElevation="@dimen/card_view_elevation">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:paddingLeft="@dimen/activity_horizontal_margin"
                        android:paddingTop="@dimen/activity_vertical_margin"
                        android:paddingRight="@dimen/activity_horizontal_margin"
                        android:paddingBottom="@dimen/activity_vertical_margin">

                    <ImageView
                            android:id="@+id/imageView1"
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:gravity="center"
                            android:src="@drawable/ic_about" />

                    <TextView
                            android:id="@+id/appName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10sp"
                            android:gravity="center"
                            android:text="@string/app_name"
                            android:textAppearance="?android:attr/textAppearanceLarge" />


                    <TextView
                            android:id="@+id/version"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5sp"
                            android:gravity="center"
                            android:text="@{@string/version(BuildConfig.VERSION_NAME)}"
                            android:textAppearance="?android:attr/textAppearanceSmall" />

                    <TextView
                            android:id="@+id/author"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="18sp"
                            android:gravity="center"
                            android:text="@string/author"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                    <com.google.android.material.button.MaterialButton
                            android:id="@+id/email"
                            style="@style/Widget.MaterialComponents.Button.TextButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10sp"
                            android:autoLink="email"
                            android:gravity="center"
                            android:text="@string/email"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                            android:id="@+id/infoPart"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20sp"
                            android:gravity="center"
                            android:text="@string/info_part"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                    <com.google.android.material.button.MaterialButton
                            android:id="@+id/rate"
                            style="@style/Widget.MaterialComponents.Button.TextButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10sp"
                            android:gravity="center"
                            android:onClick="@{() -> viewModel.openGooglePlay(BuildConfig.APPLICATION_ID)}"
                            android:text="@string/rate_app"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                    <com.google.android.material.button.MaterialButton
                            android:id="@+id/privacy"
                            style="@style/Widget.MaterialComponents.Button.TextButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:onClick="@{() -> viewModel.openUrl(@string/privacy_url)}"
                            android:text="@string/privacy_policy"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                    <com.google.android.material.button.MaterialButton
                            android:id="@+id/terms"
                            style="@style/Widget.MaterialComponents.Button.TextButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:onClick="@{() -> viewModel.openDialog(DialogType.TERMS)}"
                            android:text="@string/terms"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                    <com.google.android.material.button.MaterialButton
                            android:id="@+id/license"
                            style="@style/Widget.MaterialComponents.Button.TextButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:onClick="@{() -> viewModel.openDialog(DialogType.LICENSE)}"
                            android:text="@string/license"
                            android:textAppearance="?android:attr/textAppearanceMedium" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </androidx.coordinatorlayout.widget.CoordinatorLayout>
    </ScrollView>
</layout>
